--- a/Web_day_tieng_Anh/appsettings.json
+++ b/Web_day_tieng_Anh/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-8QMT4F7\\SQLEXPRESS04; Database=WebDayTiengAnh;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
