--- a/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
+++ b/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\" />
+    <Folder Include="Areas\Lecturers\Controller\" />
+    <Folder Include="Areas\Lecturers\View\" />
+    <Folder Include="Areas\Student\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
