--- a/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
+++ b/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
@@ -10,7 +10,10 @@
     <Folder Include="Areas\Admin\" />
     <Folder Include="Areas\Lecturers\Controller\" />
     <Folder Include="Areas\Lecturers\View\" />
-    <Folder Include="Areas\Student\" />
+    <Folder Include="Areas\Student\Views\Lessons\" />
+    <Folder Include="Areas\Student\Views\Answers\" />
+    <Folder Include="Areas\Student\Views\Tests\" />
+    <Folder Include="Areas\Student\Views\Questions\" />
     <Folder Include="wwwroot\img\imguser\" />
   </ItemGroup>
 
