--- a/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
+++ b/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\" />
-    <Folder Include="Areas\Lecturers\View\" />
+    <Folder Include="Areas\Lecturers\Views\" />
     <Folder Include="Areas\Students\Views\Lessons\" />
     <Folder Include="Areas\Students\Views\Answers\" />
     <Folder Include="Areas\Students\Views\Tests\" />
