Fix Course, Lessons

--- a/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
+++ b/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\" />
+    <Folder Include="Areas\Lecturers\Views\Questions\" />
     <Folder Include="Areas\Students\Views\Lessons\" />
     <Folder Include="Areas\Students\Views\Answers\" />
     <Folder Include="Areas\Students\Views\Tests\" />
