--- a/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
+++ b/Web_day_tieng_Anh/Web_day_tieng_Anh.csproj
@@ -13,6 +13,7 @@
     <Folder Include="Areas\Students\Views\Tests\" />
     <Folder Include="Areas\Students\Views\Questions\" />
     <Folder Include="wwwroot\img\imguser\" />
+    <Folder Include="wwwroot\videos\" />
   </ItemGroup>
 
   <ItemGroup>
