Tạo thanh toán bằng paypal

--- a/Web_day_tieng_Anh/appsettings.json
+++ b/Web_day_tieng_Anh/appsettings.json
@@ -9,5 +9,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+    "PayPal": {
+      "Mode": "sandbox",
+      "ConnectionTimeout": 360000,
+      "RequestRetries": 1,
+      "ClientId": "Aa5PEOY26vNKH9fC34wLFfVtmTBDr5icd-Cv8d31jYrFvro9_WOalJMTnbH4c5reYqgK-5ESMUhI6ZK-",
+      "ClientSecret": "EJzt_MFMZfcSf2-eV5AWzOaV442L66ovPIjb9z0lZbCJvzFzdZtGunIGHg_FwSt1VihfNO4-g01BCR6v"
+    }
+  
+
+
 }
+
