--- a/Web_day_tieng_Anh/appsettings.json
+++ b/Web_day_tieng_Anh/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-EO0TJBN7;Database=WebDayTiengAnhTest1;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-8QMT4F7\\SQLEXPRESS04;Database=WebDayTiengAnhTest1;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "Logging": {
