--- a/Web_day_tieng_Anh/appsettings.json
+++ b/Web_day_tieng_Anh/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-EO0TJBN7;Database=WebDayTiengAnhTest1;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-8QMT4F7\\SQLEXPRESS04;Database=WebDayTiengAnhTest1;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "Logging": {
@@ -10,16 +10,17 @@
     }
   },
   "AllowedHosts": "*",
-  
-    "PayPal": {
-      "Mode": "sandbox",
-      "ConnectionTimeout": 360000,
-      "RequestRetries": 1,
-      "ClientId": "Aa5PEOY26vNKH9fC34wLFfVtmTBDr5icd-Cv8d31jYrFvro9_WOalJMTnbH4c5reYqgK-5ESMUhI6ZK-",
-      "ClientSecret": "EJzt_MFMZfcSf2-eV5AWzOaV442L66ovPIjb9z0lZbCJvzFzdZtGunIGHg_FwSt1VihfNO4-g01BCR6v"
-    }
-  
 
+  "PayPal": {
+    "Mode": "sandbox",
+    "ConnectionTimeout": 360000,
+    "RequestRetries": 1,
+    "ClientId": "Aa5PEOY26vNKH9fC34wLFfVtmTBDr5icd-Cv8d31jYrFvro9_WOalJMTnbH4c5reYqgK-5ESMUhI6ZK-",
+    "ClientSecret": "EJzt_MFMZfcSf2-eV5AWzOaV442L66ovPIjb9z0lZbCJvzFzdZtGunIGHg_FwSt1VihfNO4-g01BCR6v"
+  },
+
+  //"TK": "sb-jwnry30806968@personal.example.com",
+  //"Mk": "SM^B*c/5"
 
 }
 
